Replacement for .blank()